# teste

./: CMakeLists.txt
src/: main.cpp
src/IO/: IOManager.cpp  IOManager.hpp
src/cpu/: CONTROL_UNIT.cpp  CONTROL_UNIT.hpp  PCB.hpp  pcb_loader.cpp
src/memory/: MemoryManager.cpp  MemoryManager.hpp  cache.hpp
src/parser_json/: parser_json.hpp
